Added the changes for fetching the config file